--- a/pages/index.html
+++ b/pages/index.html
@@ -2,9 +2,151 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Spinazie Lasagne</title>
 </head>
 <body>
+
+<h1>Volkoren Lasagne met Spinazie en Linzen</h1>
+<h2>Met makkelijke aanpassing maak je zet je zo een gezonde lasagne op tafel</h2>
+<img src="../assets/lasagne-spinazie.jpg" alt="Spinazi Lasagne" width="800px"/>
+
+<main>
+    <!--        Ingredients-->
+    <section>
+        <h3>Ingredienten</h3>
+        <ul>
+            <li>1 middelgrote ui</li>
+            <li>2 tenen knoflook</li>
+            <li>400 g champignons</li>
+            <li>750 g diepvries fijngesneden spinazie</li>
+            <li>2 el gedroogde Italiaanse kruiden</li>
+            <li>200 g zuivelspread light</li>
+            <li>400 g linzen in blik</li>
+            <li>12 volkoren lasagne bladen</li>
+            <li>150 g geraspte 30+ kaas</li>
+        </ul>
+    </section>
+
+    <!--        Featured Ingredients -->
+    <section>
+        <h3>Uitgelichte ingredienten</h3>
+        <figure>
+            <img src="../assets/spinazie.png" alt="Spinazie" width="150">
+            <figcaption>Spinazie is erg gezond</figcaption>
+        </figure>
+        <figure>
+            <img src="../assets/kaas.jpeg" alt="Kaas" width="150">
+            <figcaption>Kaas is vooral lekker</figcaption>
+        </figure>
+
+        <p>Klik <a href="voedingswaarden.html">hier</a> voor de voedingswaarden</p>
+    </section>
+
+    <!--        Preparation-->
+    <section>
+        <h3>Bereiden</h3>
+        <ol>
+            <li>Verwarm de oven voor op 180 ºC.</li>
+            <li>Snijd de volgende ingredienten:
+                <ul>
+                    <li>Snipper de ui</li>
+                    <li>Snijd de knoflook fijn.</li>
+                    <li>Snijde de champignon in plakjes</li>
+                </ul>
+            </li>
+            <li>Verhit de olie in een hapjespan en bak de ui en champignons 3 min. op hoog vuur. Voeg de knoflook,
+                spinazie
+                en
+                Italiaanse kruiden toe en verwarm 7 minuten op middelhoog vuur mee. Roer regelmatig.
+            </li>
+            <li>Voeg de zuivelspread toe en verwarm 1 min. mee. Breng de groentesaus op smaak met peper en eventueel
+                zout.
+                Doe
+                ondertussen de linzen in een vergiet en spoel af onder koud stromend water. Laat uitlekken en voeg
+                toe
+                aan
+                de
+                groentesaus.
+            </li>
+            <li>Schep 2 lepels groentesaus op de bodem van de ovenschaal. Bedek achtereenvolgens met ⅓ van de
+                lasagnebladen,
+                ⅓
+                van de rest van de groentesaus en de kaas. Herhaal dit nog 2 keer en eindig met de rest van de kaas.
+                Breng
+                op
+                smaak met peper.
+            </li>
+            <li>Bak de lasagne in het midden van de oven in ca. 40 min. gaar. Dek af met aluminiumfolie als de
+                lasagne
+                te
+                donker
+                wordt.
+            </li>
+        </ol>
+
+        <p><strong>Beredingstip:</strong> Je kunt de lasagne 1 dag van tevoren maken tot en met het afbakken in de
+            oven.
+            Bewaar afgedekt in de koelkast en laat tijdens het voorverwarmen van de oven op kamertemperatuur komen.
+        </p>
+    </section>
+</main>
+
+<br/>
+
+<!--Review form-->
+<footer>
+    <h3>Bedankt voor het lezen van dit recept. Laat ons weten wat je ervan vond!</h3>
+    <form onsubmit="http://www.voorbeeld.nl/review.php">
+<!--        Client contact info-->
+        <fieldset>
+            <legend>Gegevens</legend>
+            <p>
+                <label for="name">Name: </label>
+                <input type="text" id="name" name="name">
+            </p>
+            <p>
+                <label for="email-address">Email: </label>
+                <input type="email" id="email-address" name="email">
+            </p>
+        </fieldset>
+
+<!--        Client review-->
+        <fieldset>
+            <legend>Jouw review</legend>
+            <p>
+                <label for="found">Hoe heb je dit recept gevonden?</label>
+                <select name="found-recipe" id="found" name="found-recipe-at">
+                    <option value="other">Anders</option>
+                    <option value="facebook">Via Facebook</option>
+                    <option value="from-a-friend">Via een vriend/vriendin</option>
+                </select>
+            </p>
+            <p>
+            <p>Zou je dit recept willen proberen?</p>
+            <input type="radio" id="try-no" name="try-recipe"/>
+            <label for="try-no">Nee</label>
+
+            <input type="radio" id="try-yes" name="try-recipe"/>
+            <label for="try-yes">Ja</label>
+
+            <input type="radio" id="try-maybe" name="try-recipe"/>
+            <label for="try-maybe">Misschien</label>
+            </p>
+
+            <p>
+                <label for="remarks">Opmerkingen:</label><br/>
+                <textarea name="recipe-remarks" id="remarks" cols="50" rows="4"
+                          placeholder="Wat vond je van het recept?"></textarea>
+            </p>
+            <p>
+                <input type="checkbox" id="newsletter" checked name="recieve-newsletter">
+                <label for="newsletter">Schrijf me in voor de nieuwsbrief</label>
+            </p>
+
+            <button type="submit">Versturen</button>
+        </fieldset>
+    </form>
+</footer>
 
 </body>
 </html>
