--- a/pages/voedingswaarden.html
+++ b/pages/voedingswaarden.html
@@ -5,6 +5,30 @@
     <title>Title</title>
 </head>
 <body>
+    <h1>Voedingswaarden Tabel</h1>
+    <table border="">
+        <tr>
+            <th>Voeding</th>
+            <th>Waarde</th>
+        </tr>
+        <tr>
+            <td>koolhydraten</td>
+            <td>57 g</td>
+        </tr>
+        <tr>
+            <td>natrium</td>
+            <td>520 g</td>
+        </tr>
+        <tr>
+            <td>eiwit</td>
+            <td>33 g</td>
+        </tr>
+        <tr>
+            <td>vet</td>
+            <td>26 g</td>
+        </tr>
+
+    </table>
 
 </body>
 </html>
